tests/good/control_flow_check.lat
int main() {
    // 0
    int x = 0;
    if (x == 1)
    {
        // 1
        if (x < 0)
        {
            // 2
            return 2;
        }

        // 3
        return 1;
    }
    else if (false)
    {
        // 5
        if (true)
        {
            // 6
            if (true)
            {
                return 4;
            }
            else
            {
                return 3;
            }
        }
    }
    else
    {
        // 9
        return 5;
    }
}