tests/bad/wrong_functions/return.lat
int main () {
    int x = 2;

    x = readInt();

    if (x == 2)
    {
        error();
    }
    else
    {
        x = 3;
    }
}